style contact section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<section>
+	<div class="wrap">
+		<section id="contact">
 		<h1>Your Contact Info</h1>
 		<form>
-			<label>Full Name</label>
-			<input type="text" name="username" placeholder="Enter your Name">	
+			<label >Full Name</label>
+			<input type="text" name="username" placeholder="Enter your Name" class="col-full">	
 			<label>Email</label>
-			<input type="text" name="email-address" placeholder="Enter your email">
+			<input type="text" name="email-address" placeholder="Enter your email" class="col-full">
 			<label>Phone Number</label>
-			<input type="tel" name="usertel" placeholder="Enter your phone Number">
+			<input type="tel" name="usertel" placeholder="Enter your phone number" class="col-full">
 		</form>
 	</section>
 
@@ -44,5 +45,6 @@
 		<input type="checkbox" name="store_updates">
 		<button type="submit">Submit Application</button>
 	</section>
+	</div>
 </body>
 </html>
