start basic styling for about section

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 		</form>
 	</section>
 
-	<section>
+	<section id="about">
 		<h1>Skills and Interests</h1>
 		<form>
-			<label>What Course are you interested in?</label>
-			<select>
+			<label class="col-full">What Course are you interested in?</label>
+			<select class="col-third">
 				<option value="select">Select</option>
 			</select>
 			<label>Where do you want to take this course?</label>
 			<input type="radio" name="San_Francisco" value="San Francisco">
 			<input type="radio" name="Chicago" value="Chicago">
-			<label>Past Experience</label>
+			<label class="col-full">Past Experience</label>
 			<textarea name="past_experience" placeholder="What is your past experience?"></textarea>
 		</form>
 	</section>
