add styling for about

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
 			<select class="col-third">
 				<option value="select">Select</option>
 			</select>
-			<label>Where do you want to take this course?</label>
+			<label class="col-full">Where do you want to take this course?</label>
+			<div class="location">
+			<label>San Francisco</label>
 			<input type="radio" name="San_Francisco" value="San Francisco">
+			<label>Chicago</label>
 			<input type="radio" name="Chicago" value="Chicago">
+			</div>
 			<label class="col-full">Past Experience</label>
 			<textarea name="past_experience" placeholder="What is your past experience?"></textarea>
 		</form>
