add first fnal draft of styling

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 		</form>
 	</section>
 
-	<section>
-		<label>I want to receive email updates.</label>
-		<input type="checkbox" name="store_updates">
+	<section id="updates">
+		<div class="align-left">
+			<label>I want to receive email updates.</label>
+			<input type="checkbox" name="store_updates">
+		</div>
 		<button type="submit">Submit Application</button>
 	</section>
 	</div>
